--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^33.3.1",
+    "ag-grid-react": "^33.3.1",
     "axios": "^1.9.0",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
@@ -14,6 +16,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
